--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,14 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/dragImage" />
+        android:id="@+id/dragImage"
+        android:contentDescription="@string/drag_description" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Custom List View Test"
+        android:text="@string/title"
         android:id="@+id/t_Title"
         android:layout_marginBottom="10dp" />
 
@@ -23,7 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignBaseline="@+id/t_Title"
-        android:weightSum="1.0">
+        android:weightSum="1.0"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:orientation="vertical"
@@ -37,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Players"
+                android:text="@string/players"
                 android:id="@+id/textView2"
                 android:layout_marginTop="20dp" />
 
@@ -60,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Selections"
+                android:text="@string/selections"
                 android:id="@+id/textView3"
                 android:layout_marginTop="20dp" />
 
