- Fixed misunderstood interpretation of how CustomAdapter.getView() is supposed to work, and how view holders play into it. The DragData class may no longer be necessary, and the code will have to be reverted to a private view holder class. - Minor code change to fix an IDE based error in DragDropListView - Addressed HARD TO FIND bug in the MainActivity. Hint: Don't use setContentView() twice unless you know what you are doing.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,9 +45,10 @@
                 android:layout_marginTop="20dp" />
 
             <com.example.cliff.customlisttest.DragDropListView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/playerList" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/playerList"
+                android:visibility="visible" />
 
         </LinearLayout>
 
@@ -66,9 +67,11 @@
                 android:layout_marginTop="20dp" />
 
             <com.example.cliff.customlisttest.DragDropListView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/selectionList" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/selectionList"
+                android:layout_weight="0.5"
+                android:visibility="visible" />
 
         </LinearLayout>
     </LinearLayout>
