--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,8 @@
             android:layout_height="match_parent"
             android:layout_alignParentBottom="false"
             android:layout_alignBaseline="@+id/t_Title"
-            android:layout_weight="0.5">
+            android:layout_weight="0.5"
+            android:layout_marginRight="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -57,7 +58,8 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.5">
+            android:layout_weight="0.5"
+            android:layout_marginLeft="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
