--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,19 @@
         android:id="@+id/t_Title"
         android:layout_marginBottom="10dp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/dragPositionText"
+        android:layout_below="@+id/t_Title" />
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignBaseline="@+id/t_Title"
+        android:layout_alignBaseline="@+id/dragPositionText"
         android:weightSum="1.0"
         android:baselineAligned="false">
 
@@ -51,6 +59,13 @@
                 android:layout_height="match_parent"
                 android:id="@+id/playerList"
                 android:visibility="visible" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Large Text"
+                android:id="@+id/textView" />
 
         </LinearLayout>
 
